# rotchess-rust

./: Cargo.toml  README.md  justfile
docs/: index.html  rotchess-rust.wasm  rotchess_mq.wasm
docs/favicon/: site.webmanifest
rotchess-core/: Cargo.toml  LICENSE  README.md
rotchess-core/.github/workflows/: docs.yml
rotchess-core/src/: emulator.rs  floating_drift.rs  lib.rs  piece.rs  turn.rs
rotchess-event-api/: Cargo.toml
rotchess-event-api/src/: lib.rs
rotchess-mq/: Cargo.toml
rotchess-mq/src/: app.rs  common.rs  icon.rs  main.rs
rotchess-ui/: Cargo.toml
rotchess-ui/assets/sound/: attribution
rotchess-ui/src/: common.rs  lib.rs
rotchess-ui/src/screens/: game.rs  load.rs  lobby.rs  mod.rs  multiplayer.rs  settings.rs  singleplayer.rs  splash.rs
rotchess-window/: Cargo.toml
rotchess-window/src/: lib.rs
src/: app.rs  event_queue.rs  icon.rs  lib.rs  logic.rs  main.rs  screen.rs
src/assets/: convert.sh
src/chess/: emulator.rs  floating_drift.rs  mod.rs  piece.rs  turn.rs
src/logic/: event_queue.rs  mod.rs  screen_logic.rs  screen_state.rs
