[workspace]
resolver = "3"
members = ["rotchess-window", "rotchess-core", "rotchess-ui"]

# these are the dependencies we want to keep the same across the workspace.
[workspace.dependencies]
rotchess-window = { path = "rotchess-window" }
rotchess-core = { path = "rotchess-core" }
rotchess-ui = { path = "rotchess-ui" }
macroquad = { version = "0.4.14", features = ["audio"] }

# everything below here is how we get src/main.rs compiling.

[package]
name = "rotchess"
version = "0.0.0-alpha"
edition = "2024"

[[bin]]
name = "rotchess-rust"
path = "src/main.rs"

# note the workspace = true. this, thoughout the Cargo.tomls in this space, 
# will inherit from [workspace.dependencies] above.
[dependencies]
rotchess-window = { workspace = true }
rotchess-ui = { workspace = true }
macroquad = { workspace = true }